--- a/.github/workflows/pr-prediction.yml
+++ b/.github/workflows/pr-prediction.yml
@@ -33,4 +33,5 @@ jobs:
         run: |
           curl -X POST https://pr-prediction.onrender.com/github/full_data \
                -H "Content-Type: application/json" \
-               -d '{"token": "${{ secrets.PR_PREDICTION_TOKEN }}", "owner": "${{ fromJson(steps.pr-details.outputs.result).owner }}", "repo": "${{ fromJson(steps.pr-details.outputs.result).repo }}", "developer_username": "${{ fromJson(steps.pr-details.outputs.result).developer_username }}", "pull_number": "${{ fromJson(steps.pr-details.outputs.result).number }}"}'
+               -d "{\"token\": \"${{ secrets.PR_PREDICTION_TOKEN }}\", \"owner\": \"${{ fromJson(steps.pr-details.outputs.result).owner }}\", \"repo\": \"${{ fromJson(steps.pr-details.outputs.result).repo }}\", \"developer_username\": \"${{ fromJson(steps.pr-details.outputs.result).developer_username }}\", \"pull_number\": \"${{ fromJson(steps.pr-details.outputs.result).number }}\"}"
+
