--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,22 @@ charset-normalizer==3.3.2
 filelock==3.13.3
 gdown==5.1.0
 idna==3.6
+joblib==1.3.2
+lightgbm==4.3.0
 numpy==1.26.4
+packaging==24.0
 pandas==2.2.1
+patsy==0.5.6
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
 requests==2.31.0
+scikit-learn==1.4.1.post1
+scipy==1.13.0
 six==1.16.0
 soupsieve==2.5
+statsmodels==0.14.1
+threadpoolctl==3.4.0
 tqdm==4.66.2
 tzdata==2024.1
 urllib3==2.2.1
-statsmodels==0.14.1
