--- a/.github/workflows/pr-prediction.yml
+++ b/.github/workflows/pr-prediction.yml
@@ -42,20 +42,13 @@ jobs:
           DEVELOPER_USERNAME: ${{ steps.pr-details.outputs.developer_username }}
           PULL_NUMBER: ${{ steps.pr-details.outputs.number }}
         run: |
-          curl -X POST https://pr-prediction.onrender.com/github/full_data \
-               -H "Content-Type: application/json" \
-               -d "{\"token\": \"${TOKEN}\", \"owner\": \"${OWNER}\", \"repo\": \"${REPO}\", \"developer_username\": \"${DEVELOPER_USERNAME}\", \"pull_number\": \"${PULL_NUMBER}\"}"
-               echo "PREDICTION_RESULT=$result" >> $GITHUB_ENV
+          result=$(curl -X POST https://pr-prediction.onrender.com/github/full_data \
+              -H "Content-Type: application/json" \
+              -d "{\"token\": \"${TOKEN}\", \"owner\": \"${OWNER}\", \"repo\": \"${REPO}\", \"developer_username\": \"${DEVELOPER_USERNAME}\", \"pull_number\": \"${PULL_NUMBER}\"}")
+          echo "PREDICTION_RESULT=${result}" >> $GITHUB_ENV
 
       - name: Comment PR Prediction Result
-        uses: actions/github-script@v6
+        uses: mshick/add-pr-comment@v1
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const predictionResult = process.env.PREDICTION_RESULT;
-            github.rest.issues.createComment({
-              owner: '${{ steps.pr-details.outputs.owner }}',
-              repo: '${{ steps.pr-details.outputs.repo }}',
-              issue_number: ${{ steps.pr-details.outputs.number }},
-              body: `Prediction result: ${predictionResult}`
-            });
+          message: "Prediction result: ${{ env.PREDICTION_RESULT }}"
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
