--- a/.github/workflows/pr-prediction.yml
+++ b/.github/workflows/pr-prediction.yml
@@ -46,9 +46,10 @@ jobs:
               -H "Content-Type: application/json" \
               -d "{\"token\": \"${TOKEN}\", \"owner\": \"${OWNER}\", \"repo\": \"${REPO}\", \"developer_username\": \"${DEVELOPER_USERNAME}\", \"pull_number\": \"${PULL_NUMBER}\"}")
           echo "PREDICTION_RESULT=${result}" >> $GITHUB_ENV
-
+      
       - name: Comment PR Prediction Result
         uses: mshick/add-pr-comment@v1
         with:
           message: "Prediction result: ${{ env.PREDICTION_RESULT }}"
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token: ${{ secrets.PR_PREDICTION_TOKEN }}  # Using the new PAT
+
