--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ filelock==3.13.3
 gdown==5.1.0
 idna==3.6
 joblib==1.3.2
-lightgbm==4.3.0
+# lightgbm==4.3.0
 numpy==1.26.4
 packaging==24.0
 pandas==2.2.1
